# esp_hmi_panel

sources/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
sources/main/: CMakeLists.txt  README.md  data_simulator.c  main.c  mqtt.c  prog_support.c  ui_event.c  ui_main.c  ui_sensor.c  ui_support.c
sources/main/icon/: Bulb.c  Bulb_b.c  Bulb_s.c  Humi.c  Socket.c  Socket_b.c  Socket_s.c  Temp.c  co.c  light.c  mems.c  no_wifi.c  temp_humid.c  unknow.c
sources/main/icon/oldSoc/: Bulb.c  Bulb_b.c  Bulb_s.c  Socket.c  Socket_b.c  Socket_s.c
sources/main/include/: data_simulator.h  mqtt.h  prog_support.h  ui_event.h  ui_main.h  ui_sensor.h  ui_support.h
