idf_component_register( SRCS    main.c
                                data_simulator.c
                                ui_main.c
                                ui_support.c
                                ui_event.c
                                prog_support.c
                                cJson.c
                                mqtt.c
                                icon/light.c
                                icon/Bulb.c
                                icon/Socket.c
                                icon/Bulb_s.c
                                icon/Socket_s.c
                                icon/Bulb_b.c
                                icon/Socket_b.c
                                icon/mems.c
                                icon/Temp.c
                                icon/Humi.c
                                icon/co.c
                                icon/unknow.c
                                icon/no_wifi.c
                        INCLUDE_DIRS include)
